parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> translation_unit
Rule 1     translation_unit -> external_declaration
Rule 2     translation_unit -> translation_unit external_declaration
Rule 3     external_declaration -> function_definition
Rule 4     external_declaration -> declaration
Rule 5     function_definition -> declaration_specifiers declarator declaration_listopt compound_statement
Rule 6     declaration -> declaration_specifiers init_declarator_listopt SEMI
Rule 7     declaration_listopt -> declaration_list
Rule 8     declaration_listopt -> empty
Rule 9     declaration_list -> declaration
Rule 10    declaration_list -> declaration_list declaration
Rule 11    declaration_specifiersopt -> declaration_specifiers
Rule 12    declaration_specifiersopt -> empty
Rule 13    declaration_specifiers -> storage_class_specifier declaration_specifiersopt
Rule 14    declaration_specifiers -> type_specifier declaration_specifiersopt
Rule 15    storage_class_specifier -> EXTERN
Rule 16    storage_class_specifier -> STATIC
Rule 17    type_specifier -> VOID
Rule 18    type_specifier -> CHAR
Rule 19    type_specifier -> INT
Rule 20    type_specifier -> FLOAT
Rule 21    init_declarator_listopt -> init_declarator_list
Rule 22    init_declarator_listopt -> empty
Rule 23    init_declarator_list -> init_declarator
Rule 24    init_declarator_list -> init_declarator_list COMMA init_declarator
Rule 25    init_declarator -> declarator
Rule 26    init_declarator -> declarator EQUALS initializer
Rule 27    specifier_qualifier_listopt -> specifier_qualifier_list
Rule 28    specifier_qualifier_listopt -> empty
Rule 29    specifier_qualifier_list -> type_specifier specifier_qualifier_listopt
Rule 30    declarator -> pointeropt direct_declarator
Rule 31    direct_declarator -> ID
Rule 32    direct_declarator -> LPAREN declarator RPAREN
Rule 33    direct_declarator -> direct_declarator LBRACKET assignment_expressionopt RBRACKET
Rule 34    direct_declarator -> direct_declarator LBRACKET STATIC assignment_expression RBRACKET
Rule 35    direct_declarator -> direct_declarator LBRACKET TIMES RBRACKET
Rule 36    direct_declarator -> direct_declarator LPAREN parameter_type_list RPAREN
Rule 37    direct_declarator -> direct_declarator LPAREN identifier_listopt RPAREN
Rule 38    pointeropt -> pointer
Rule 39    pointeropt -> empty
Rule 40    pointer -> TIMES
Rule 41    pointer -> TIMES pointer
Rule 42    parameter_list -> parameter_declaration
Rule 43    parameter_list -> parameter_list COMMA parameter_declaration
Rule 44    parameter_declaration -> declaration_specifiers declarator
Rule 45    parameter_declaration -> declaration_specifiers
Rule 46    identifier_listopt -> identifier_list
Rule 47    identifier_listopt -> empty
Rule 48    identifier_list -> ID
Rule 49    identifier_list -> identifier_list COMMA ID
Rule 50    initializer -> assignment_expression
Rule 51    initializer -> LBRACE initializer_list RBRACE
Rule 52    initializer -> LBRACE initializer_list COMMA RBRACE
Rule 53    initializer_list -> initializer
Rule 54    initializer_list -> initializer_list COMMA initializer
Rule 55    type_name -> specifier_qualifier_list
Rule 56    parameter_type_list -> parameter_list
Rule 57    statement -> selection_statement
Rule 58    statement -> iteration_statement
Rule 59    statement -> jump_statement
Rule 60    statement -> compound_statement
Rule 61    statement -> expression_statement
Rule 62    selection_statement -> IF LPAREN expression RPAREN statement
Rule 63    selection_statement -> IF LPAREN expression RPAREN statement ELSE statement
Rule 64    iteration_statement -> FOR LPAREN expressionopt SEMI expressionopt SEMI expressionopt RPAREN statement
Rule 65    iteration_statement -> FOR LPAREN declaration expressionopt SEMI expressionopt RPAREN statement
Rule 66    jump_statement -> RETURN expressionopt SEMI
Rule 67    jump_statement -> BREAK SEMI
Rule 68    jump_statement -> CONTINUE SEMI
Rule 69    compound_statement -> LBRACE block_item_listopt RBRACE
Rule 70    block_item_listopt -> block_item_list
Rule 71    block_item_listopt -> empty
Rule 72    block_item_list -> block_item
Rule 73    block_item_list -> block_item_list block_item
Rule 74    block_item -> declaration
Rule 75    block_item -> statement
Rule 76    expression_statement -> expressionopt SEMI
Rule 77    expressionopt -> expression
Rule 78    expressionopt -> empty
Rule 79    expression -> assignment_expression
Rule 80    expression -> expression COMMA assignment_expression
Rule 81    assignment_expressionopt -> assignment_expression
Rule 82    assignment_expressionopt -> empty
Rule 83    assignment_expression -> conditional_expression
Rule 84    assignment_expression -> unary_expression assignment_operator assignment_expression
Rule 85    assignment_operator -> EQUALS
Rule 86    conditional_expression -> logical_OR_expression
Rule 87    logical_OR_expression -> logical_AND_expression
Rule 88    logical_OR_expression -> logical_OR_expression LOR logical_AND_expression
Rule 89    logical_AND_expression -> inclusive_OR_expression
Rule 90    logical_AND_expression -> logical_AND_expression LAND inclusive_OR_expression
Rule 91    inclusive_OR_expression -> exclusive_OR_expression
Rule 92    inclusive_OR_expression -> inclusive_OR_expression OR exclusive_OR_expression
Rule 93    exclusive_OR_expression -> AND_expression
Rule 94    exclusive_OR_expression -> exclusive_OR_expression XOR AND_expression
Rule 95    AND_expression -> equality_expression
Rule 96    AND_expression -> AND_expression AND equality_expression
Rule 97    equality_expression -> relational_expression
Rule 98    equality_expression -> equality_expression EQ relational_expression
Rule 99    equality_expression -> equality_expression NE relational_expression
Rule 100   relational_expression -> shift_expression
Rule 101   relational_expression -> relational_expression LT shift_expression
Rule 102   relational_expression -> relational_expression GT shift_expression
Rule 103   relational_expression -> relational_expression LE shift_expression
Rule 104   relational_expression -> relational_expression GE shift_expression
Rule 105   shift_expression -> additive_expression
Rule 106   shift_expression -> shift_expression LSHIFT additive_expression
Rule 107   shift_expression -> shift_expression RSHIFT additive_expression
Rule 108   additive_expression -> multiplicative_expression
Rule 109   additive_expression -> additive_expression PLUS multiplicative_expression
Rule 110   additive_expression -> additive_expression MINUS multiplicative_expression
Rule 111   multiplicative_expression -> cast_expression
Rule 112   multiplicative_expression -> multiplicative_expression TIMES cast_expression
Rule 113   multiplicative_expression -> multiplicative_expression DIVIDE cast_expression
Rule 114   multiplicative_expression -> multiplicative_expression MOD cast_expression
Rule 115   cast_expression -> unary_expression
Rule 116   cast_expression -> LPAREN type_name RPAREN cast_expression
Rule 117   unary_expression -> postfix_expression
Rule 118   unary_expression -> INCREMENT unary_expression
Rule 119   unary_expression -> DECREMENT unary_expression
Rule 120   unary_expression -> unary_operator cast_expression
Rule 121   unary_operator -> AND
Rule 122   unary_operator -> TIMES
Rule 123   unary_operator -> PLUS
Rule 124   unary_operator -> MINUS
Rule 125   unary_operator -> NOT
Rule 126   unary_operator -> LNOT
Rule 127   postfix_expression -> primary_expression
Rule 128   postfix_expression -> postfix_expression LBRACKET expression RBRACKET
Rule 129   postfix_expression -> postfix_expression LPAREN argument_expression_listopt RPAREN
Rule 130   postfix_expression -> postfix_expression INCREMENT
Rule 131   postfix_expression -> postfix_expression DECREMENT
Rule 132   postfix_expression -> LPAREN type_name RPAREN LBRACKET initializer_list RBRACKET
Rule 133   postfix_expression -> LPAREN type_name RPAREN LBRACKET initializer_list COMMA RBRACKET
Rule 134   primary_expression -> ID
Rule 135   primary_expression -> constant
Rule 136   primary_expression -> STRING
Rule 137   primary_expression -> LPAREN expression RPAREN
Rule 138   argument_expression_listopt -> argument_expression_list
Rule 139   argument_expression_listopt -> empty
Rule 140   argument_expression_list -> assignment_expression
Rule 141   argument_expression_list -> argument_expression_list COMMA assignment_expression
Rule 142   constant -> INUM
Rule 143   constant -> FNUM
Rule 144   constant -> CHARACTER
Rule 145   empty -> <empty>

Terminals, with rules where they appear

AND                  : 96 121
BREAK                : 67
CHAR                 : 18
CHARACTER            : 144
COMMA                : 24 43 49 52 54 80 133 141
CONTINUE             : 68
DECREMENT            : 119 131
DIVIDE               : 113
ELSE                 : 63
EQ                   : 98
EQUALS               : 26 85
EXTERN               : 15
FLOAT                : 20
FNUM                 : 143
FOR                  : 64 65
GE                   : 104
GT                   : 102
ID                   : 31 48 49 134
IF                   : 62 63
INCREMENT            : 118 130
INT                  : 19
INUM                 : 142
LAND                 : 90
LBRACE               : 51 52 69
LBRACKET             : 33 34 35 128 132 133
LE                   : 103
LNOT                 : 126
LOR                  : 88
LPAREN               : 32 36 37 62 63 64 65 116 129 132 133 137
LSHIFT               : 106
LT                   : 101
MINUS                : 110 124
MOD                  : 114
NE                   : 99
NOT                  : 125
OR                   : 92
PLUS                 : 109 123
RBRACE               : 51 52 69
RBRACKET             : 33 34 35 128 132 133
RETURN               : 66
RPAREN               : 32 36 37 62 63 64 65 116 129 132 133 137
RSHIFT               : 107
SEMI                 : 6 64 64 65 66 67 68 76
STATIC               : 16 34
STRING               : 136
TIMES                : 35 40 41 112 122
VOID                 : 17
XOR                  : 94
error                : 

Nonterminals, with rules where they appear

AND_expression       : 93 94 96
additive_expression  : 105 106 107 109 110
argument_expression_list : 138 141
argument_expression_listopt : 129
assignment_expression : 34 50 79 80 81 84 140 141
assignment_expressionopt : 33
assignment_operator  : 84
block_item           : 72 73
block_item_list      : 70 73
block_item_listopt   : 69
cast_expression      : 111 112 113 114 116 120
compound_statement   : 5 60
conditional_expression : 83
constant             : 135
declaration          : 4 9 10 65 74
declaration_list     : 7 10
declaration_listopt  : 5
declaration_specifiers : 5 6 11 44 45
declaration_specifiersopt : 13 14
declarator           : 5 25 26 32 44
direct_declarator    : 30 33 34 35 36 37
empty                : 8 12 22 28 39 47 71 78 82 139
equality_expression  : 95 96 98 99
exclusive_OR_expression : 91 92 94
expression           : 62 63 77 80 128 137
expression_statement : 61
expressionopt        : 64 64 64 65 65 66 76
external_declaration : 1 2
function_definition  : 3
identifier_list      : 46 49
identifier_listopt   : 37
inclusive_OR_expression : 89 90 92
init_declarator      : 23 24
init_declarator_list : 21 24
init_declarator_listopt : 6
initializer          : 26 53 54
initializer_list     : 51 52 54 132 133
iteration_statement  : 58
jump_statement       : 59
logical_AND_expression : 87 88 90
logical_OR_expression : 86 88
multiplicative_expression : 108 109 110 112 113 114
parameter_declaration : 42 43
parameter_list       : 43 56
parameter_type_list  : 36
pointer              : 38 41
pointeropt           : 30
postfix_expression   : 117 128 129 130 131
primary_expression   : 127
relational_expression : 97 98 99 101 102 103 104
selection_statement  : 57
shift_expression     : 100 101 102 103 104 106 107
specifier_qualifier_list : 27 55
specifier_qualifier_listopt : 29
statement            : 62 63 63 64 65 75
storage_class_specifier : 13
translation_unit     : 2 0
type_name            : 116 132 133
type_specifier       : 14 29
unary_expression     : 84 115 118 119
unary_operator       : 120

Parsing method: LALR

state 0

    (0) S' -> . translation_unit
    (1) translation_unit -> . external_declaration
    (2) translation_unit -> . translation_unit external_declaration
    (3) external_declaration -> . function_definition
    (4) external_declaration -> . declaration
    (5) function_definition -> . declaration_specifiers declarator declaration_listopt compound_statement
    (6) declaration -> . declaration_specifiers init_declarator_listopt SEMI
    (13) declaration_specifiers -> . storage_class_specifier declaration_specifiersopt
    (14) declaration_specifiers -> . type_specifier declaration_specifiersopt
    (15) storage_class_specifier -> . EXTERN
    (16) storage_class_specifier -> . STATIC
    (17) type_specifier -> . VOID
    (18) type_specifier -> . CHAR
    (19) type_specifier -> . INT
    (20) type_specifier -> . FLOAT

    EXTERN          shift and go to state 8
    STATIC          shift and go to state 9
    VOID            shift and go to state 10
    CHAR            shift and go to state 11
    INT             shift and go to state 12
    FLOAT           shift and go to state 13

    translation_unit               shift and go to state 1
    external_declaration           shift and go to state 2
    function_definition            shift and go to state 3
    declaration                    shift and go to state 4
    declaration_specifiers         shift and go to state 5
    storage_class_specifier        shift and go to state 6
    type_specifier                 shift and go to state 7

state 1

    (0) S' -> translation_unit .
    (2) translation_unit -> translation_unit . external_declaration
    (3) external_declaration -> . function_definition
    (4) external_declaration -> . declaration
    (5) function_definition -> . declaration_specifiers declarator declaration_listopt compound_statement
    (6) declaration -> . declaration_specifiers init_declarator_listopt SEMI
    (13) declaration_specifiers -> . storage_class_specifier declaration_specifiersopt
    (14) declaration_specifiers -> . type_specifier declaration_specifiersopt
    (15) storage_class_specifier -> . EXTERN
    (16) storage_class_specifier -> . STATIC
    (17) type_specifier -> . VOID
    (18) type_specifier -> . CHAR
    (19) type_specifier -> . INT
    (20) type_specifier -> . FLOAT

    EXTERN          shift and go to state 8
    STATIC          shift and go to state 9
    VOID            shift and go to state 10
    CHAR            shift and go to state 11
    INT             shift and go to state 12
    FLOAT           shift and go to state 13

    external_declaration           shift and go to state 14
    function_definition            shift and go to state 3
    declaration                    shift and go to state 4
    declaration_specifiers         shift and go to state 5
    storage_class_specifier        shift and go to state 6
    type_specifier                 shift and go to state 7

state 2

    (1) translation_unit -> external_declaration .

    EXTERN          reduce using rule 1 (translation_unit -> external_declaration .)
    STATIC          reduce using rule 1 (translation_unit -> external_declaration .)
    VOID            reduce using rule 1 (translation_unit -> external_declaration .)
    CHAR            reduce using rule 1 (translation_unit -> external_declaration .)
    INT             reduce using rule 1 (translation_unit -> external_declaration .)
    FLOAT           reduce using rule 1 (translation_unit -> external_declaration .)
    $end            reduce using rule 1 (translation_unit -> external_declaration .)


state 3

    (3) external_declaration -> function_definition .

    EXTERN          reduce using rule 3 (external_declaration -> function_definition .)
    STATIC          reduce using rule 3 (external_declaration -> function_definition .)
    VOID            reduce using rule 3 (external_declaration -> function_definition .)
    CHAR            reduce using rule 3 (external_declaration -> function_definition .)
    INT             reduce using rule 3 (external_declaration -> function_definition .)
    FLOAT           reduce using rule 3 (external_declaration -> function_definition .)
    $end            reduce using rule 3 (external_declaration -> function_definition .)


state 4

    (4) external_declaration -> declaration .

    EXTERN          reduce using rule 4 (external_declaration -> declaration .)
    STATIC          reduce using rule 4 (external_declaration -> declaration .)
    VOID            reduce using rule 4 (external_declaration -> declaration .)
    CHAR            reduce using rule 4 (external_declaration -> declaration .)
    INT             reduce using rule 4 (external_declaration -> declaration .)
    FLOAT           reduce using rule 4 (external_declaration -> declaration .)
    $end            reduce using rule 4 (external_declaration -> declaration .)


state 5

    (5) function_definition -> declaration_specifiers . declarator declaration_listopt compound_statement
    (6) declaration -> declaration_specifiers . init_declarator_listopt SEMI
    (30) declarator -> . pointeropt direct_declarator
    (21) init_declarator_listopt -> . init_declarator_list
    (22) init_declarator_listopt -> . empty
    (38) pointeropt -> . pointer
    (39) pointeropt -> . empty
    (23) init_declarator_list -> . init_declarator
    (24) init_declarator_list -> . init_declarator_list COMMA init_declarator
    (145) empty -> .
    (40) pointer -> . TIMES
    (41) pointer -> . TIMES pointer
    (25) init_declarator -> . declarator
    (26) init_declarator -> . declarator EQUALS initializer

    SEMI            reduce using rule 145 (empty -> .)
    ID              reduce using rule 145 (empty -> .)
    LPAREN          reduce using rule 145 (empty -> .)
    TIMES           shift and go to state 22

    declarator                     shift and go to state 15
    init_declarator_listopt        shift and go to state 16
    pointeropt                     shift and go to state 17
    init_declarator_list           shift and go to state 18
    empty                          shift and go to state 19
    pointer                        shift and go to state 20
    init_declarator                shift and go to state 21

state 6

    (13) declaration_specifiers -> storage_class_specifier . declaration_specifiersopt
    (11) declaration_specifiersopt -> . declaration_specifiers
    (12) declaration_specifiersopt -> . empty
    (13) declaration_specifiers -> . storage_class_specifier declaration_specifiersopt
    (14) declaration_specifiers -> . type_specifier declaration_specifiersopt
    (145) empty -> .
    (15) storage_class_specifier -> . EXTERN
    (16) storage_class_specifier -> . STATIC
    (17) type_specifier -> . VOID
    (18) type_specifier -> . CHAR
    (19) type_specifier -> . INT
    (20) type_specifier -> . FLOAT

    TIMES           reduce using rule 145 (empty -> .)
    SEMI            reduce using rule 145 (empty -> .)
    ID              reduce using rule 145 (empty -> .)
    LPAREN          reduce using rule 145 (empty -> .)
    COMMA           reduce using rule 145 (empty -> .)
    RPAREN          reduce using rule 145 (empty -> .)
    EXTERN          shift and go to state 8
    STATIC          shift and go to state 9
    VOID            shift and go to state 10
    CHAR            shift and go to state 11
    INT             shift and go to state 12
    FLOAT           shift and go to state 13

    storage_class_specifier        shift and go to state 6
    declaration_specifiersopt      shift and go to state 23
    declaration_specifiers         shift and go to state 24
    empty                          shift and go to state 25
    type_specifier                 shift and go to state 7

state 7

    (14) declaration_specifiers -> type_specifier . declaration_specifiersopt
    (11) declaration_specifiersopt -> . declaration_specifiers
    (12) declaration_specifiersopt -> . empty
    (13) declaration_specifiers -> . storage_class_specifier declaration_specifiersopt
    (14) declaration_specifiers -> . type_specifier declaration_specifiersopt
    (145) empty -> .
    (15) storage_class_specifier -> . EXTERN
    (16) storage_class_specifier -> . STATIC
    (17) type_specifier -> . VOID
    (18) type_specifier -> . CHAR
    (19) type_specifier -> . INT
    (20) type_specifier -> . FLOAT

    TIMES           reduce using rule 145 (empty -> .)
    SEMI            reduce using rule 145 (empty -> .)
    ID              reduce using rule 145 (empty -> .)
    LPAREN          reduce using rule 145 (empty -> .)
    COMMA           reduce using rule 145 (empty -> .)
    RPAREN          reduce using rule 145 (empty -> .)
    EXTERN          shift and go to state 8
    STATIC          shift and go to state 9
    VOID            shift and go to state 10
    CHAR            shift and go to state 11
    INT             shift and go to state 12
    FLOAT           shift and go to state 13

    type_specifier                 shift and go to state 7
    declaration_specifiersopt      shift and go to state 26
    declaration_specifiers         shift and go to state 24
    empty                          shift and go to state 25
    storage_class_specifier        shift and go to state 6

state 8

    (15) storage_class_specifier -> EXTERN .

    EXTERN          reduce using rule 15 (storage_class_specifier -> EXTERN .)
    STATIC          reduce using rule 15 (storage_class_specifier -> EXTERN .)
    VOID            reduce using rule 15 (storage_class_specifier -> EXTERN .)
    CHAR            reduce using rule 15 (storage_class_specifier -> EXTERN .)
    INT             reduce using rule 15 (storage_class_specifier -> EXTERN .)
    FLOAT           reduce using rule 15 (storage_class_specifier -> EXTERN .)
    TIMES           reduce using rule 15 (storage_class_specifier -> EXTERN .)
    SEMI            reduce using rule 15 (storage_class_specifier -> EXTERN .)
    ID              reduce using rule 15 (storage_class_specifier -> EXTERN .)
    LPAREN          reduce using rule 15 (storage_class_specifier -> EXTERN .)
    COMMA           reduce using rule 15 (storage_class_specifier -> EXTERN .)
    RPAREN          reduce using rule 15 (storage_class_specifier -> EXTERN .)


state 9

    (16) storage_class_specifier -> STATIC .

    EXTERN          reduce using rule 16 (storage_class_specifier -> STATIC .)
    STATIC          reduce using rule 16 (storage_class_specifier -> STATIC .)
    VOID            reduce using rule 16 (storage_class_specifier -> STATIC .)
    CHAR            reduce using rule 16 (storage_class_specifier -> STATIC .)
    INT             reduce using rule 16 (storage_class_specifier -> STATIC .)
    FLOAT           reduce using rule 16 (storage_class_specifier -> STATIC .)
    TIMES           reduce using rule 16 (storage_class_specifier -> STATIC .)
    SEMI            reduce using rule 16 (storage_class_specifier -> STATIC .)
    ID              reduce using rule 16 (storage_class_specifier -> STATIC .)
    LPAREN          reduce using rule 16 (storage_class_specifier -> STATIC .)
    COMMA           reduce using rule 16 (storage_class_specifier -> STATIC .)
    RPAREN          reduce using rule 16 (storage_class_specifier -> STATIC .)


state 10

    (17) type_specifier -> VOID .

    EXTERN          reduce using rule 17 (type_specifier -> VOID .)
    STATIC          reduce using rule 17 (type_specifier -> VOID .)
    VOID            reduce using rule 17 (type_specifier -> VOID .)
    CHAR            reduce using rule 17 (type_specifier -> VOID .)
    INT             reduce using rule 17 (type_specifier -> VOID .)
    FLOAT           reduce using rule 17 (type_specifier -> VOID .)
    TIMES           reduce using rule 17 (type_specifier -> VOID .)
    SEMI            reduce using rule 17 (type_specifier -> VOID .)
    ID              reduce using rule 17 (type_specifier -> VOID .)
    LPAREN          reduce using rule 17 (type_specifier -> VOID .)
    COMMA           reduce using rule 17 (type_specifier -> VOID .)
    RPAREN          reduce using rule 17 (type_specifier -> VOID .)


state 11

    (18) type_specifier -> CHAR .

    EXTERN          reduce using rule 18 (type_specifier -> CHAR .)
    STATIC          reduce using rule 18 (type_specifier -> CHAR .)
    VOID            reduce using rule 18 (type_specifier -> CHAR .)
    CHAR            reduce using rule 18 (type_specifier -> CHAR .)
    INT             reduce using rule 18 (type_specifier -> CHAR .)
    FLOAT           reduce using rule 18 (type_specifier -> CHAR .)
    TIMES           reduce using rule 18 (type_specifier -> CHAR .)
    SEMI            reduce using rule 18 (type_specifier -> CHAR .)
    ID              reduce using rule 18 (type_specifier -> CHAR .)
    LPAREN          reduce using rule 18 (type_specifier -> CHAR .)
    COMMA           reduce using rule 18 (type_specifier -> CHAR .)
    RPAREN          reduce using rule 18 (type_specifier -> CHAR .)


state 12

    (19) type_specifier -> INT .

    EXTERN          reduce using rule 19 (type_specifier -> INT .)
    STATIC          reduce using rule 19 (type_specifier -> INT .)
    VOID            reduce using rule 19 (type_specifier -> INT .)
    CHAR            reduce using rule 19 (type_specifier -> INT .)
    INT             reduce using rule 19 (type_specifier -> INT .)
    FLOAT           reduce using rule 19 (type_specifier -> INT .)
    TIMES           reduce using rule 19 (type_specifier -> INT .)
    SEMI            reduce using rule 19 (type_specifier -> INT .)
    ID              reduce using rule 19 (type_specifier -> INT .)
    LPAREN          reduce using rule 19 (type_specifier -> INT .)
    COMMA           reduce using rule 19 (type_specifier -> INT .)
    RPAREN          reduce using rule 19 (type_specifier -> INT .)


state 13

    (20) type_specifier -> FLOAT .

    EXTERN          reduce using rule 20 (type_specifier -> FLOAT .)
    STATIC          reduce using rule 20 (type_specifier -> FLOAT .)
    VOID            reduce using rule 20 (type_specifier -> FLOAT .)
    CHAR            reduce using rule 20 (type_specifier -> FLOAT .)
    INT             reduce using rule 20 (type_specifier -> FLOAT .)
    FLOAT           reduce using rule 20 (type_specifier -> FLOAT .)
    TIMES           reduce using rule 20 (type_specifier -> FLOAT .)
    SEMI            reduce using rule 20 (type_specifier -> FLOAT .)
    ID              reduce using rule 20 (type_specifier -> FLOAT .)
    LPAREN          reduce using rule 20 (type_specifier -> FLOAT .)
    COMMA           reduce using rule 20 (type_specifier -> FLOAT .)
    RPAREN          reduce using rule 20 (type_specifier -> FLOAT .)


state 14

    (2) translation_unit -> translation_unit external_declaration .

    EXTERN          reduce using rule 2 (translation_unit -> translation_unit external_declaration .)
    STATIC          reduce using rule 2 (translation_unit -> translation_unit external_declaration .)
    VOID            reduce using rule 2 (translation_unit -> translation_unit external_declaration .)
    CHAR            reduce using rule 2 (translation_unit -> translation_unit external_declaration .)
    INT             reduce using rule 2 (translation_unit -> translation_unit external_declaration .)
    FLOAT           reduce using rule 2 (translation_unit -> translation_unit external_declaration .)
    $end            reduce using rule 2 (translation_unit -> translation_unit external_declaration .)


state 15

    (5) function_definition -> declaration_specifiers declarator . declaration_listopt compound_statement
    (25) init_declarator -> declarator .
    (26) init_declarator -> declarator . EQUALS initializer
    (7) declaration_listopt -> . declaration_list
    (8) declaration_listopt -> . empty
    (9) declaration_list -> . declaration
    (10) declaration_list -> . declaration_list declaration
    (145) empty -> .
    (6) declaration -> . declaration_specifiers init_declarator_listopt SEMI
    (13) declaration_specifiers -> . storage_class_specifier declaration_specifiersopt
    (14) declaration_specifiers -> . type_specifier declaration_specifiersopt
    (15) storage_class_specifier -> . EXTERN
    (16) storage_class_specifier -> . STATIC
    (17) type_specifier -> . VOID
    (18) type_specifier -> . CHAR
    (19) type_specifier -> . INT
    (20) type_specifier -> . FLOAT

    COMMA           reduce using rule 25 (init_declarator -> declarator .)
    SEMI            reduce using rule 25 (init_declarator -> declarator .)
    EQUALS          shift and go to state 29
    LBRACE          reduce using rule 145 (empty -> .)
    EXTERN          shift and go to state 8
    STATIC          shift and go to state 9
    VOID            shift and go to state 10
    CHAR            shift and go to state 11
    INT             shift and go to state 12
    FLOAT           shift and go to state 13

    declaration_specifiers         shift and go to state 27
    declaration_listopt            shift and go to state 28
    declaration_list               shift and go to state 30
    empty                          shift and go to state 31
    declaration                    shift and go to state 32
    storage_class_specifier        shift and go to state 6
    type_specifier                 shift and go to state 7

state 16

    (6) declaration -> declaration_specifiers init_declarator_listopt . SEMI

    SEMI            shift and go to state 33


state 17

    (30) declarator -> pointeropt . direct_declarator
    (31) direct_declarator -> . ID
    (32) direct_declarator -> . LPAREN declarator RPAREN
    (33) direct_declarator -> . direct_declarator LBRACKET assignment_expressionopt RBRACKET
    (34) direct_declarator -> . direct_declarator LBRACKET STATIC assignment_expression RBRACKET
    (35) direct_declarator -> . direct_declarator LBRACKET TIMES RBRACKET
    (36) direct_declarator -> . direct_declarator LPAREN parameter_type_list RPAREN
    (37) direct_declarator -> . direct_declarator LPAREN identifier_listopt RPAREN

    ID              shift and go to state 35
    LPAREN          shift and go to state 36

    direct_declarator              shift and go to state 34

state 18

    (21) init_declarator_listopt -> init_declarator_list .
    (24) init_declarator_list -> init_declarator_list . COMMA init_declarator

    SEMI            reduce using rule 21 (init_declarator_listopt -> init_declarator_list .)
    COMMA           shift and go to state 37


state 19

    (22) init_declarator_listopt -> empty .
    (39) pointeropt -> empty .

    SEMI            reduce using rule 22 (init_declarator_listopt -> empty .)
    ID              reduce using rule 39 (pointeropt -> empty .)
    LPAREN          reduce using rule 39 (pointeropt -> empty .)


state 20

    (38) pointeropt -> pointer .

    ID              reduce using rule 38 (pointeropt -> pointer .)
    LPAREN          reduce using rule 38 (pointeropt -> pointer .)


state 21

    (23) init_declarator_list -> init_declarator .

    COMMA           reduce using rule 23 (init_declarator_list -> init_declarator .)
    SEMI            reduce using rule 23 (init_declarator_list -> init_declarator .)


state 22

    (40) pointer -> TIMES .
    (41) pointer -> TIMES . pointer
    (40) pointer -> . TIMES
    (41) pointer -> . TIMES pointer

    ID              reduce using rule 40 (pointer -> TIMES .)
    LPAREN          reduce using rule 40 (pointer -> TIMES .)
    TIMES           shift and go to state 22

    pointer                        shift and go to state 38

state 23

    (13) declaration_specifiers -> storage_class_specifier declaration_specifiersopt .

    TIMES           reduce using rule 13 (declaration_specifiers -> storage_class_specifier declaration_specifiersopt .)
    SEMI            reduce using rule 13 (declaration_specifiers -> storage_class_specifier declaration_specifiersopt .)
    ID              reduce using rule 13 (declaration_specifiers -> storage_class_specifier declaration_specifiersopt .)
    LPAREN          reduce using rule 13 (declaration_specifiers -> storage_class_specifier declaration_specifiersopt .)
    COMMA           reduce using rule 13 (declaration_specifiers -> storage_class_specifier declaration_specifiersopt .)
    RPAREN          reduce using rule 13 (declaration_specifiers -> storage_class_specifier declaration_specifiersopt .)


state 24

    (11) declaration_specifiersopt -> declaration_specifiers .

    TIMES           reduce using rule 11 (declaration_specifiersopt -> declaration_specifiers .)
    SEMI            reduce using rule 11 (declaration_specifiersopt -> declaration_specifiers .)
    ID              reduce using rule 11 (declaration_specifiersopt -> declaration_specifiers .)
    LPAREN          reduce using rule 11 (declaration_specifiersopt -> declaration_specifiers .)
    COMMA           reduce using rule 11 (declaration_specifiersopt -> declaration_specifiers .)
    RPAREN          reduce using rule 11 (declaration_specifiersopt -> declaration_specifiers .)


state 25

    (12) declaration_specifiersopt -> empty .

    TIMES           reduce using rule 12 (declaration_specifiersopt -> empty .)
    SEMI            reduce using rule 12 (declaration_specifiersopt -> empty .)
    ID              reduce using rule 12 (declaration_specifiersopt -> empty .)
    LPAREN          reduce using rule 12 (declaration_specifiersopt -> empty .)
    COMMA           reduce using rule 12 (declaration_specifiersopt -> empty .)
    RPAREN          reduce using rule 12 (declaration_specifiersopt -> empty .)


state 26

    (14) declaration_specifiers -> type_specifier declaration_specifiersopt .

    TIMES           reduce using rule 14 (declaration_specifiers -> type_specifier declaration_specifiersopt .)
    SEMI            reduce using rule 14 (declaration_specifiers -> type_specifier declaration_specifiersopt .)
    ID              reduce using rule 14 (declaration_specifiers -> type_specifier declaration_specifiersopt .)
    LPAREN          reduce using rule 14 (declaration_specifiers -> type_specifier declaration_specifiersopt .)
    COMMA           reduce using rule 14 (declaration_specifiers -> type_specifier declaration_specifiersopt .)
    RPAREN          reduce using rule 14 (declaration_specifiers -> type_specifier declaration_specifiersopt .)


state 27

    (6) declaration -> declaration_specifiers . init_declarator_listopt SEMI
    (21) init_declarator_listopt -> . init_declarator_list
    (22) init_declarator_listopt -> . empty
    (23) init_declarator_list -> . init_declarator
    (24) init_declarator_list -> . init_declarator_list COMMA init_declarator
    (145) empty -> .
    (25) init_declarator -> . declarator
    (26) init_declarator -> . declarator EQUALS initializer
    (30) declarator -> . pointeropt direct_declarator
    (38) pointeropt -> . pointer
    (39) pointeropt -> . empty
    (40) pointer -> . TIMES
    (41) pointer -> . TIMES pointer

    SEMI            reduce using rule 145 (empty -> .)
    ID              reduce using rule 145 (empty -> .)
    LPAREN          reduce using rule 145 (empty -> .)
    TIMES           shift and go to state 22

    init_declarator_listopt        shift and go to state 16
    init_declarator_list           shift and go to state 18
    empty                          shift and go to state 19
    init_declarator                shift and go to state 21
    declarator                     shift and go to state 39
    pointeropt                     shift and go to state 17
    pointer                        shift and go to state 20

state 28

    (5) function_definition -> declaration_specifiers declarator declaration_listopt . compound_statement
    (69) compound_statement -> . LBRACE block_item_listopt RBRACE

    LBRACE          shift and go to state 41

    compound_statement             shift and go to state 40

state 29
